# homeassistant-rs

./: .env.example  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  structs.rs  tests.rs
