cargo-features = ["edition2024"]

[package]
name = "homeassistant-rs"
version = "0.1.3"
edition = "2024"
description = "Library for interacting with the Homeassistant API"
authors = ["Blexyel"]
homepage = "https://github.com/Blexyel/homeassistant-rs"
repository = "https://github.com/Blexyel/homeassistant-rs"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"

[dev-dependencies]
protokoll = "0.1.4"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }